--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body{
     align-items: center;
     justify-content: center;
     gap: 10px;
+    text-align: center;
 }
 
 .game-container .high-score{
@@ -19,7 +20,7 @@ body{
     visibility: visible;
 }
 .game-container h1{
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: bolder;
 }
 
@@ -29,6 +30,7 @@ body{
     margin: 10px;
     border: 5px solid black;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 .game-container button{
