--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     font-family: "Press Start 2P", sans-serif;
     background: linear-gradient(135deg, #f7e8a4, #ffdea0);
