--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body{
 }
 
 .game-container button{
-    margin-bottom: 30px;
+    margin: 30px 0;
     background: linear-gradient(135deg, #4169E1, #9B59B6);
     color: white;
     font-family: "Press Start 2P", sans-serif;
@@ -51,10 +51,13 @@ body{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.1s ease;
 }
-.game-container button:hover{
+.game-container button:not(.btnClicked):hover{
     background: linear-gradient(135deg, #5A9BF6, #B084D7);
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
     transform: scale(1.02);
+}
+.game-container .btnClicked{
+    cursor: not-allowed;
 }
 
 
